uor-foundation-macros/tests/ui/uor_ground_unknown_keyword.stderr
error: macro expansion ignores `;` and any tokens following
 --> tests/ui/uor_ground_unknown_keyword.rs:5:13
  |
5 |       let _ = uor_ground! {
  |  _____________^
6 | |         unknown_shape foo {
7 | |             root_term: { 0 };
8 | |         } as u32
9 | |     };
  | |_____^ caused by the macro expansion here
  |
  = note: the usage of `uor_ground!` is likely invalid in expression context

error: uor_ground! parse error: unknown declaration keyword `unknown_shape`; expected one of ["compile_unit", "dispatch_rule", "lease", "parallel", "predicate", "stream", "witt_level"]
       = reason: https://uor.foundation/reduction/ConvergenceStall
       = run `cargo uor explain reduction:ConvergenceStall` for ontology context
 --> tests/ui/uor_ground_unknown_keyword.rs:5:13
  |
5 |       let _ = uor_ground! {
  |  _____________^
6 | |         unknown_shape foo {
7 | |             root_term: { 0 };
8 | |         } as u32
9 | |     };
  | |_____^
  |
  = note: this error originates in the macro `uor_ground` (in Nightly builds, run with -Z macro-backtrace for more info)
